# anti_helper

./: .env.example  .gitignore  Dockerfile  Dockerfile.sandbox  EVAL_COMPLETE.md  EVAL_HARNESS_SUMMARY.md  Makefile  PROJECT_MEMORY.md  Procfile.dev  README.md  alembic.ini  debug_task.py  debug_worker_inline.py  docker-compose.yml  main.py  manual_approve.py  pyproject.toml  requeue_task.py  session_summary_2025_12_08.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
backend/: __init__.py
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/scripts/: gravity_cli.py  sync_schema.py
debug_workspace/: Analysis.py  Home.py  README.md
debug_workspace/tests/: test_models.py  test_routes.py  test_services.py
eval/: COMMANDS.md  IMPLEMENTATION_NOTES.md  JUDGE_IMPORTANCE.md  JUDGE_PROMPT.md  QUICKSTART.md  README.md  __init__.py  analyze_results.py  judge.py  loader.py  run_experiment.py  schemas.py  setup_and_run.py
eval/experiments/: exp_phase1_baseline.yaml  exp_with_judge.yaml
eval/tasks/: 01_streamlit_multi_page_app.yaml  01_todo_api.yaml  02_api_endpoint_validation.yaml  02_weather_cli.yaml  03_blog_generator.yaml  03_refactor_auth_service.yaml  04_add_redis_caching.yaml  04_expense_tracker.yaml  05_data_pipeline.yaml  05_fix_memory_leak.yaml
frontend/: jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: Layout.jsx  pages.config.js
frontend/tests/: setup.ts
frontend/types/: schema.ts
libs/gravity_core/: __init__.py  base.py  schema.py  tracking.py
md/: DEEP_ARCHITECTURAL_AUDIT.md  MASTER_PLAN.md  PROJECT_MEMORY.md  TECHNICAL.md  debug_analysis.md
scripts/: run_agent.py  test_agent_local.py
tests/: __init__.py  conftest.py  evaluate_agent.py  fix_schema.py  inspect_execution.py  manual_db_check.py  test_pause.py
tests/e2e/: test_mission_lifecycle.py  test_workflow.py
(+129 files in other folders)
